// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metadata Snapshot should match for AMP News & UK origin 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "amp": "",
    "dir": "ltr",
    "lang": "en-gb",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/news/articles/c0000000001o",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/news/articles/c0000000001o.amp",
      "hrefLang": "x-default",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.com/news/articles/c0000000001o.amp",
      "hrefLang": "en",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.co.uk/news/articles/c0000000001o.amp",
      "hrefLang": "en-gb",
      "rel": "alternate",
    },
    {
      "href": "http://localhost:7080/news/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News",
      "name": "application-name",
    },
    {
      "content": "Article summary.",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "Article summary.",
      "property": "og:description",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "property": "og:image",
    },
    {
      "content": "BBC News",
      "property": "og:image:alt",
    },
    {
      "content": "en_GB",
      "property": "og:locale",
    },
    {
      "content": "BBC News",
      "property": "og:site_name",
    },
    {
      "content": "Article Headline for SEO - BBC News",
      "property": "og:title",
    },
    {
      "content": "article",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/news/articles/c0000000001o",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@BBCNews",
      "name": "twitter:creator",
    },
    {
      "content": "Article summary.",
      "name": "twitter:description",
    },
    {
      "content": "BBC News",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@BBCNews",
      "name": "twitter:site",
    },
    {
      "content": "Article Headline for SEO - BBC News",
      "name": "twitter:title",
    },
    {
      "content": "Royal Wedding 2018",
      "name": "article:tag",
    },
    {
      "content": "Duchess of Sussex",
      "name": "article:tag",
    },
    {
      "content": "Queen Victoria",
      "name": "article:tag",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "Article Headline for SEO - BBC News",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Canonical News & international origin 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "ltr",
    "lang": "en-gb",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/news/articles/c0000000001o",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/news/articles/c0000000001o",
      "hrefLang": "x-default",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.com/news/articles/c0000000001o",
      "hrefLang": "en",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.co.uk/news/articles/c0000000001o",
      "hrefLang": "en-gb",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.com/news/articles/c0000000001o.amp",
      "rel": "amphtml",
    },
    {
      "href": "http://localhost:7080/news/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News",
      "name": "application-name",
    },
    {
      "content": "Article summary.",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "Article summary.",
      "property": "og:description",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "property": "og:image",
    },
    {
      "content": "BBC News",
      "property": "og:image:alt",
    },
    {
      "content": "en_GB",
      "property": "og:locale",
    },
    {
      "content": "BBC News",
      "property": "og:site_name",
    },
    {
      "content": "Article Headline for SEO - BBC News",
      "property": "og:title",
    },
    {
      "content": "article",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/news/articles/c0000000001o",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@BBCNews",
      "name": "twitter:creator",
    },
    {
      "content": "Article summary.",
      "name": "twitter:description",
    },
    {
      "content": "BBC News",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@BBCNews",
      "name": "twitter:site",
    },
    {
      "content": "Article Headline for SEO - BBC News",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/news/articles/c0000000001o",
      "http-equiv": "onion-location",
    },
    {
      "content": "Royal Wedding 2018",
      "name": "article:tag",
    },
    {
      "content": "Duchess of Sussex",
      "name": "article:tag",
    },
    {
      "content": "Queen Victoria",
      "name": "article:tag",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "Article Headline for SEO - BBC News",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Persian News & UK origin 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "amp": "",
    "dir": "rtl",
    "lang": "fa",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/persian/articles/c4vlle3q337o",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.co.uk/persian/articles/c4vlle3q337o",
      "hrefLang": "fa",
      "rel": "alternate",
    },
    {
      "href": "http://localhost:7080/persian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News فارسی",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News فارسی",
      "name": "application-name",
    },
    {
      "content": "خلاصه مقاله",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "خلاصه مقاله",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "property": "og:image",
    },
    {
      "content": "BBC News فارسی",
      "property": "og:image:alt",
    },
    {
      "content": "fa",
      "property": "og:locale",
    },
    {
      "content": "BBC News فارسی",
      "property": "og:site_name",
    },
    {
      "content": "سرصفحه مقاله - BBC News فارسی",
      "property": "og:title",
    },
    {
      "content": "article",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/persian/articles/c4vlle3q337o",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@bbcpersian",
      "name": "twitter:creator",
    },
    {
      "content": "خلاصه مقاله",
      "name": "twitter:description",
    },
    {
      "content": "BBC News فارسی",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@bbcpersian",
      "name": "twitter:site",
    },
    {
      "content": "سرصفحه مقاله - BBC News فارسی",
      "name": "twitter:title",
    },
    {
      "content": "Royal Wedding 2018",
      "name": "article:tag",
    },
    {
      "content": "Duchess of Sussex",
      "name": "article:tag",
    },
    {
      "content": "Queen Victoria",
      "name": "article:tag",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "سرصفحه مقاله - BBC News فارسی",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Persian News & byline twitter handle 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "ltr",
    "lang": "pcm",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/pidgin/articles/cwl08rd38l6o",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/pidgin/articles/cwl08rd38l6o.amp",
      "rel": "amphtml",
    },
    {
      "href": "http://localhost:7080/pidgin/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News Pidgin",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News Pidgin",
      "name": "application-name",
    },
    {
      "content": "Article summary in Pidgin",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "Article summary in Pidgin",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
      "property": "og:image",
    },
    {
      "content": "BBC News Pidgin",
      "property": "og:image:alt",
    },
    {
      "content": "pcm",
      "property": "og:locale",
    },
    {
      "content": "BBC News Pidgin",
      "property": "og:site_name",
    },
    {
      "content": "Article Headline for SEO in Pidgin - BBC News Pidgin",
      "property": "og:title",
    },
    {
      "content": "article",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/pidgin/articles/cwl08rd38l6o",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@mary_harper",
      "name": "twitter:creator",
    },
    {
      "content": "Article summary in Pidgin",
      "name": "twitter:description",
    },
    {
      "content": "BBC News Pidgin",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@BBCNews",
      "name": "twitter:site",
    },
    {
      "content": "Article Headline for SEO in Pidgin - BBC News Pidgin",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/pidgin/articles/cwl08rd38l6o",
      "http-equiv": "onion-location",
    },
    {
      "content": "Royal Wedding 2018",
      "name": "article:tag",
    },
    {
      "content": "Duchess of Sussex",
      "name": "article:tag",
    },
    {
      "content": "Queen Victoria",
      "name": "article:tag",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "Article Headline for SEO in Pidgin - BBC News Pidgin",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Persian News & international origin 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "rtl",
    "lang": "fa",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/persian/articles/c4vlle3q337o",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/persian/articles/c4vlle3q337o",
      "hrefLang": "fa",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.com/persian/articles/c4vlle3q337o.amp",
      "rel": "amphtml",
    },
    {
      "href": "http://localhost:7080/persian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News فارسی",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News فارسی",
      "name": "application-name",
    },
    {
      "content": "خلاصه مقاله",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "خلاصه مقاله",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "property": "og:image",
    },
    {
      "content": "BBC News فارسی",
      "property": "og:image:alt",
    },
    {
      "content": "fa",
      "property": "og:locale",
    },
    {
      "content": "BBC News فارسی",
      "property": "og:site_name",
    },
    {
      "content": "سرصفحه مقاله - BBC News فارسی",
      "property": "og:title",
    },
    {
      "content": "article",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/persian/articles/c4vlle3q337o",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@bbcpersian",
      "name": "twitter:creator",
    },
    {
      "content": "خلاصه مقاله",
      "name": "twitter:description",
    },
    {
      "content": "BBC News فارسی",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@bbcpersian",
      "name": "twitter:site",
    },
    {
      "content": "سرصفحه مقاله - BBC News فارسی",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/persian/articles/c4vlle3q337o",
      "http-equiv": "onion-location",
    },
    {
      "content": "Royal Wedding 2018",
      "name": "article:tag",
    },
    {
      "content": "Duchess of Sussex",
      "name": "article:tag",
    },
    {
      "content": "Queen Victoria",
      "name": "article:tag",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "سرصفحه مقاله - BBC News فارسی",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Ukrainian STY with Russian lang on Amp 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "amp": "",
    "dir": "ltr",
    "lang": "ru",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "hrefLang": "ru",
      "rel": "alternate",
    },
    {
      "href": "http://localhost:7080/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News Україна",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News Україна",
      "name": "application-name",
    },
    {
      "content": "BBC Ukrainian",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "BBC Ukrainian",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "property": "og:image",
    },
    {
      "content": "BBC News Україна",
      "property": "og:image:alt",
    },
    {
      "content": "ru_UA",
      "property": "og:locale",
    },
    {
      "content": "BBC News Україна",
      "property": "og:site_name",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/ukrainian/news-53577781",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:creator",
    },
    {
      "content": "BBC Ukrainian",
      "name": "twitter:description",
    },
    {
      "content": "BBC News Україна",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:site",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "name": "twitter:title",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "BBC Ukrainian - BBC News Україна",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Ukrainian STY with Russian lang on canonical 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "ltr",
    "lang": "ru",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "hrefLang": "ru",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781.amp",
      "rel": "amphtml",
    },
    {
      "href": "http://localhost:7080/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News Україна",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News Україна",
      "name": "application-name",
    },
    {
      "content": "BBC Ukrainian",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "BBC Ukrainian",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "property": "og:image",
    },
    {
      "content": "BBC News Україна",
      "property": "og:image:alt",
    },
    {
      "content": "ru_UA",
      "property": "og:locale",
    },
    {
      "content": "BBC News Україна",
      "property": "og:site_name",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/ukrainian/news-53577781",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:creator",
    },
    {
      "content": "BBC Ukrainian",
      "name": "twitter:description",
    },
    {
      "content": "BBC News Україна",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:site",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/ukrainian/news-53577781",
      "http-equiv": "onion-location",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "BBC Ukrainian - BBC News Україна",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Ukrainian STY with Ukrainian lang on Amp 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "amp": "",
    "dir": "ltr",
    "lang": "uk",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "hrefLang": "uk",
      "rel": "alternate",
    },
    {
      "href": "http://localhost:7080/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News Україна",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News Україна",
      "name": "application-name",
    },
    {
      "content": "BBC Ukrainian",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "BBC Ukrainian",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "property": "og:image",
    },
    {
      "content": "BBC News Україна",
      "property": "og:image:alt",
    },
    {
      "content": "uk_UA",
      "property": "og:locale",
    },
    {
      "content": "BBC News Україна",
      "property": "og:site_name",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/ukrainian/news-53577781",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:creator",
    },
    {
      "content": "BBC Ukrainian",
      "name": "twitter:description",
    },
    {
      "content": "BBC News Україна",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:site",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "name": "twitter:title",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "BBC Ukrainian - BBC News Україна",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for Ukrainian STY with Ukrainian lang on canonical 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "ltr",
    "lang": "uk",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781",
      "hrefLang": "uk",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.com/ukrainian/news-53577781.amp",
      "rel": "amphtml",
    },
    {
      "href": "http://localhost:7080/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News Україна",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News Україна",
      "name": "application-name",
    },
    {
      "content": "BBC Ukrainian",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "BBC Ukrainian",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "property": "og:image",
    },
    {
      "content": "BBC News Україна",
      "property": "og:image:alt",
    },
    {
      "content": "uk_UA",
      "property": "og:locale",
    },
    {
      "content": "BBC News Україна",
      "property": "og:site_name",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/ukrainian/news-53577781",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:creator",
    },
    {
      "content": "BBC Ukrainian",
      "name": "twitter:description",
    },
    {
      "content": "BBC News Україна",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@BBC_ua",
      "name": "twitter:site",
    },
    {
      "content": "BBC Ukrainian - BBC News Україна",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/ukrainian/news-53577781",
      "http-equiv": "onion-location",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "BBC Ukrainian - BBC News Україна",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for WS Homepages 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "rtl",
    "lang": "ur",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/urdu",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/urdu",
      "hrefLang": "ur",
      "rel": "alternate",
    },
    {
      "href": "https://www.bbc.com/urdu.amp",
      "rel": "amphtml",
    },
    {
      "href": "http://localhost:7080/urdu/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News اردو",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News اردو",
      "name": "application-name",
    },
    {
      "content": "تازہ ترین خبروں، ویڈیوز اور آڈیوز کے لیے بی بی سی اردو پر آئیے۔ بی بی سی اردو دنیا بھر کی خبروں کے حصول کے لیے ایک قابلِ اعتماد ویب سائٹ ہے۔",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "تازہ ترین خبروں، ویڈیوز اور آڈیوز کے لیے بی بی سی اردو پر آئیے۔ بی بی سی اردو دنیا بھر کی خبروں کے حصول کے لیے ایک قابلِ اعتماد ویب سائٹ ہے۔",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
      "property": "og:image",
    },
    {
      "content": "BBC News اردو",
      "property": "og:image:alt",
    },
    {
      "content": "ur",
      "property": "og:locale",
    },
    {
      "content": "BBC News اردو",
      "property": "og:site_name",
    },
    {
      "content": "خبریں، تازہ خبریں، بریکنگ نیو | News, latest news, breaking news - BBC News اردو",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/urdu",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@bbcurdu",
      "name": "twitter:creator",
    },
    {
      "content": "تازہ ترین خبروں، ویڈیوز اور آڈیوز کے لیے بی بی سی اردو پر آئیے۔ بی بی سی اردو دنیا بھر کی خبروں کے حصول کے لیے ایک قابلِ اعتماد ویب سائٹ ہے۔",
      "name": "twitter:description",
    },
    {
      "content": "BBC News اردو",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@bbcurdu",
      "name": "twitter:site",
    },
    {
      "content": "خبریں، تازہ خبریں، بریکنگ نیو | News, latest news, breaking news - BBC News اردو",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/urdu",
      "http-equiv": "onion-location",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "خبریں، تازہ خبریں، بریکنگ نیو | News, latest news, breaking news - BBC News اردو",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for WS Media liveradio 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "ltr",
    "lang": "ko",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/korean/bbc_korean_radio/liveradio",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/korean/bbc_korean_radio/liveradio",
      "hrefLang": "ko",
      "rel": "alternate",
    },
    {
      "href": "http://localhost:7080/korean/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News 코리아",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News 코리아",
      "name": "application-name",
    },
    {
      "content": "세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/korean/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/korean.png",
      "property": "og:image",
    },
    {
      "content": "BBC News 코리아",
      "property": "og:image:alt",
    },
    {
      "content": "ko-KO",
      "property": "og:locale",
    },
    {
      "content": "BBC News 코리아",
      "property": "og:site_name",
    },
    {
      "content": "BBC 코리아 라디오 - BBC News 코리아",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/korean/bbc_korean_radio/liveradio",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@bbcnews",
      "name": "twitter:creator",
    },
    {
      "content": "세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다",
      "name": "twitter:description",
    },
    {
      "content": "BBC News 코리아",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/korean.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@bbcnews",
      "name": "twitter:site",
    },
    {
      "content": "BBC 코리아 라디오 - BBC News 코리아",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/korean/bbc_korean_radio/liveradio",
      "http-equiv": "onion-location",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "BBC 코리아 라디오 - BBC News 코리아",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for WS On Demand Audio 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "ltr",
    "lang": "rw",
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/gahuza/bbc_gahuza_radio/p02pcb5c",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/gahuza/bbc_gahuza_radio/p02pcb5c",
      "hrefLang": "rw",
      "rel": "alternate",
    },
    {
      "href": "http://localhost:7080/gahuza/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News Gahuza",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News Gahuza",
      "name": "application-name",
    },
    {
      "content": "Ibitekerezo ku kiganiro cyavugaga ku matora yo muri Amerika",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "Ibitekerezo ku kiganiro cyavugaga ku matora yo muri Amerika",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
      "property": "og:image",
    },
    {
      "content": "BBC News Gahuza",
      "property": "og:image:alt",
    },
    {
      "content": "rw-RW",
      "property": "og:locale",
    },
    {
      "content": "BBC News Gahuza",
      "property": "og:site_name",
    },
    {
      "content": "Imvo  n'imvano - BBC News Gahuza",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/gahuza/bbc_gahuza_radio/p02pcb5c",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@bbcgahuza",
      "name": "twitter:creator",
    },
    {
      "content": "Ibitekerezo ku kiganiro cyavugaga ku matora yo muri Amerika",
      "name": "twitter:description",
    },
    {
      "content": "BBC News Gahuza",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@bbcgahuza",
      "name": "twitter:site",
    },
    {
      "content": "Imvo  n'imvano - BBC News Gahuza",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/gahuza/bbc_gahuza_radio/p02pcb5c",
      "http-equiv": "onion-location",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "Imvo  n'imvano - BBC News Gahuza",
  "titleAttributes": {},
}
`;

exports[`Metadata Snapshot should match for WS TV 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "dir": "ltr",
    "lang": undefined,
  },
  "linkTags": [
    {
      "href": "https://www.bbc.com/hindi/bbc_hindi_tv/tv_programmes/w13xttlw",
      "rel": "canonical",
    },
    {
      "href": "https://www.bbc.com/hindi/bbc_hindi_tv/tv_programmes/w13xttlw",
      "hrefLang": "hi",
      "rel": "alternate",
    },
    {
      "href": "http://localhost:7080/hindi/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-72x72.png",
      "rel": "apple-touch-icon",
      "sizes": "72x72",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-96x96.png",
      "rel": "apple-touch-icon",
      "sizes": "96x96",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-128x128.png",
      "rel": "apple-touch-icon",
      "sizes": "128x128",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-144x144.png",
      "rel": "apple-touch-icon",
      "sizes": "144x144",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-152x152.png",
      "rel": "apple-touch-icon",
      "sizes": "152x152",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-180x180.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-192x192.png",
      "rel": "apple-touch-icon",
      "sizes": "192x192",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-384x384.png",
      "rel": "apple-touch-icon",
      "sizes": "384x384",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-512x512.png",
      "rel": "apple-touch-icon",
      "sizes": "512x512",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-72x72.png",
      "rel": "icon",
      "sizes": "72x72",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-96x96.png",
      "rel": "icon",
      "sizes": "96x96",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-192x192.png",
      "rel": "icon",
      "sizes": "192x192",
      "type": "image/png",
    },
    {
      "href": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-512x512.png",
      "rel": "apple-touch-startup-image",
    },
    {
      "href": "/favicon.ico",
      "rel": "shortcut icon",
      "type": "image/x-icon",
    },
  ],
  "metaTags": [
    {
      "content": "IE=edge",
      "http-equiv": "X-UA-Compatible",
    },
    {
      "charset": "utf-8",
    },
    {
      "content": "noodp, noydir, max-image-preview:large",
      "name": "robots",
    },
    {
      "content": "#B80000",
      "name": "theme-color",
    },
    {
      "content": "D-aEHUiyVaMoUJXjVRbDVkxS0dLTMUZLD3dLPTnWO4Q",
      "name": "google-site-verification",
    },
    {
      "content": "width=device-width, initial-scale=1, minimum-scale=1",
      "name": "viewport",
    },
    {
      "content": "BBC News हिंदी",
      "name": "apple-mobile-web-app-title",
    },
    {
      "content": "BBC News हिंदी",
      "name": "application-name",
    },
    {
      "content": "ताज़ा अंतरराष्ट्रीय, क्षेत्रीय ख़बरों और विश्लेषण के लिए देखिए बीबीसी दुनिया",
      "name": "description",
    },
    {
      "content": "1609039196070050",
      "property": "fb:app_id",
    },
    {
      "content": "mydfaj4vz8t5psneihy4nm6ff52fac",
      "name": "facebook-domain-verification",
    },
    {
      "content": "yes",
      "name": "mobile-web-app-capable",
    },
    {
      "content": "#B80000",
      "name": "msapplication-TileColor",
    },
    {
      "content": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-144x144.png",
      "name": "msapplication-TileImage",
    },
    {
      "content": "ताज़ा अंतरराष्ट्रीय, क्षेत्रीय ख़बरों और विश्लेषण के लिए देखिए बीबीसी दुनिया",
      "property": "og:description",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
      "property": "og:image",
    },
    {
      "content": "BBC News हिंदी",
      "property": "og:image:alt",
    },
    {
      "content": "hi-IN",
      "property": "og:locale",
    },
    {
      "content": "BBC News हिंदी",
      "property": "og:site_name",
    },
    {
      "content": "दुनिया - BBC News हिंदी - BBC News हिंदी",
      "property": "og:title",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "https://www.bbc.com/hindi/bbc_hindi_tv/tv_programmes/w13xttlw",
      "property": "og:url",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "@bbchindi",
      "name": "twitter:creator",
    },
    {
      "content": "ताज़ा अंतरराष्ट्रीय, क्षेत्रीय ख़बरों और विश्लेषण के लिए देखिए बीबीसी दुनिया",
      "name": "twitter:description",
    },
    {
      "content": "BBC News हिंदी",
      "name": "twitter:image:alt",
    },
    {
      "content": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
      "name": "twitter:image:src",
    },
    {
      "content": "@bbchindi",
      "name": "twitter:site",
    },
    {
      "content": "दुनिया - BBC News हिंदी - BBC News हिंदी",
      "name": "twitter:title",
    },
    {
      "content": "https://www.bbcweb3hytmzhn5d532owbu6oqadra5z3ar726vq5kgwwn6aucdccrad.onion/hindi/bbc_hindi_tv/tv_programmes/w13xttlw",
      "http-equiv": "onion-location",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [],
  "styleTags": [],
  "title": "दुनिया - BBC News हिंदी - BBC News हिंदी",
  "titleAttributes": {},
}
`;
